<resources xmlns:tools="http://schemas.android.com/tools">
<string name="app_name">Town Panchayat Tax</string>
<string name="app_name_line">Directorate Town Panchayat Tax Department</string>
<string name="app_name_line2">Directorate Town Panchayat\nTax Department</string>
<string name="hint_password">Password</string>
<string name="hint_username">User Name</string>
<string name="btn_login">Login</string>
<string name="font_circular_medium">circular-medium.ttf</string>
<string name="font_circular_bold">circular-bold.ttf</string>
<string name="font_circular_book">circular-book.ttf</string>
<string name="font_circular_black">circular-black.ttf</string>
<string name="font_normal">din_pro_light.otf</string>
<string name="font_poppins_regular">Poppins-Regular.ttf</string>
<string name="font_poppins_semibold">Poppins-SemiBold.ttf</string>
<string name="font_poppins_medium">Poppins-Medium.ttf</string>
<string name="font_poppins_light">Poppins-Light.ttf</string>
<string name="font_poppins_bold">Poppins-Bold.ttf</string>
<string name="no_internet">Your internet seems to be offline!</string>
<string name="APIKey">trnsl.1.1.20190816T092901Z.b376b2c2157b2289.99f31a236c7d1846542a4400d1bc575a16f77378</string>
<string name="view_image">View Inspected Image</string>
<string name="take_action">Take Action</string>
<string name="view_action">View Action</string>
<string name="action_taken_tv" tools:ignore="ExtraTranslation">Action Taken Against Inspection Report for High Value Project</string>
<string name="init_vector">2SN22SkJGDyOAXUU</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="nav_home">Home</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>
    <string name="home_second">Home Second</string>
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>
    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="select_TaxType">Select TaxType</string>
    <string name="enter_Assessment_ID">Enter Assessment ID</string>
    <string name="enter_Tax_Type_Id">Enter Tax Type Id</string>
    <string name="no_RECORD_FOUND">NO RECORD FOUND!</string>
    <string name="no_RECEIPT_FOUND">RECEIPT NOT FOUND!</string>
    <string name="success">Success!</string>
    <string name="atleast_Capture_one_Photo">Atleast Capture one Photo</string>
    <string name="satellite_communication_msg">Satellite communication not available to get GPS Co-ordination Please Capture Photo in Open Area..</string>
    <string name="gPS_is_not_turned_on">GPS is not turned on...</string>
    <string name="permissions_required">Permissions required!</string>
    <string name="camera_needs_few_permissions">Camera needs few permissions to work properly. Grant them in settings.</string>
    <string name="goto_SETTINGS">GOTO SETTINGS</string>
    <string name="cancel">CANCEL</string>
    <string name="title">Title</string>
    <string name="field_Visit_added">Field Visit Added In Local!</string>
    <string name="field_Visit_updated">Field Visit Updated In Local!</string>
    <string name="user_cancelled_image_capture">User cancelled image capture</string>
    <string name="sorry_Failed_to_capture_image">Sorry! Failed to capture image</string>
    <string name="user_cancelled_video_recording">User cancelled video recording</string>
    <string name="sorry_Failed_to_record_video">Sorry! Failed to record video</string>
    <string name="select_Date">Select Date</string>
    <string name="select_Financial_Year">Select Financial Year</string>
    <string name="are_you_sure_you_want_to_Logout">Are you sure you want to Logout?</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit ?</string>
    <string name="are_you_sure_you_want_to_submit">Are you sure you want to submit ?</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete ?</string>
    <string name="would_you_like_to_change_image">Would you like to change the Image ?</string>
    <string name="logging_out_while_offline_may_leads_to_loss_of_data">Logging out while offline may leads to loss of data!</string>
    <string name="sync_all_the_data_before_logout">Sync all the data before logout!</string>
    <string name="select_Ward">Select Ward</string>
    <string name="select_TradeCode">Select TradeCode</string>
    <string name="select_Street">Select Street</string>
    <string name="select_assessment">Select Assessment</string>
    <string name="please_Select_Street">Please Select Street!</string>
    <string name="select_Any_One">Select Any One!</string>
    <string name="next">Next</string>
    <string name="no">No</string>
    <string name="n">N</string>
    <string name="yes">Yes</string>
    <string name="y">Y</string>
    <string name="save_submit">No </string>
    <string name="paid">Paid</string>
    <string name="unPaid">UnPaid</string>
    <string name="amount_to_pay">License Amount </string>
    <string name="select_Licence_Type">Select Licence Type</string>
    <string name="industrial">Industrial</string>
    <string name="production">Production</string>
    <string name="commercial">Commercial</string>
    <string name="annual_Sale">Annual Sale</string>
    <string name="select_AnnualSale">Select Annual Sale</string>
    <string name="select_Motor_Range">Select Motor Range</string>
    <string name="select_Generator_Range">Select Generator Range</string>
    <string name="select_Gender">Select Gender</string>
    <string name="select_Licence_Validity">Select Licence Validity</string>
    <string name="select_Trade_Code_and_Mobile_Number">Select Trade Code and Mobile Number</string>
    <string name="no_image_Found">No image Found</string>
    <string name="enter_Description_Tamil">Enter Description Tamil</string>
    <string name="enter_Description_English">Enter Description English</string>
    <string name="enter_Valid_Email_ID">Enter Valid Email ID</string>
    <string name="enter_Email_ID">Enter Email ID</string>
    <string name="enter_Valid_Mobile_Number">Enter Valid Mobile Number</string>
    <string name="enter_Mobile_Number">Enter Mobile Number</string>
    <string name="enter_Fathers_Husband_Name_Tamil">Enter Fathers/Husband Name Tamil</string>
    <string name="enter_Father_Husband_Name_English">Enter Father/ Husband Name English</string>
    <string name="enter_Valid_Age">Enter Valid Age</string>
    <string name="enter_Applicant_Name_Tamil">Enter Applicant Name Tamil</string>
    <string name="enter_Applicant_Name_English">Enter Applicant Name English</string>
    <string name="enter_Door_Number">Enter Door Number</string>
    <string name="capture_One_Image">Capture One Image</string>
    <string name="enter_Remarks">Enter Remarks</string>
    <string name="choose_Professional_Tax_Paid_status">Choose Professional Tax Paid status</string>
    <string name="upload_Document">Upload Document</string>
    <string name="choose_Owner_or_Not">Choose Owner or Not</string>
    <string name="choose_motor_available_status">Choose motor available status</string>
    <string name="choose_generator_available_status">Choose generator available status</string>
    <string name="enter_Property_Tax_Assessment_Number">Enter Property Tax Assessment Number</string>
    <string name="choose_Property_Tax_Payment_status">Choose Property Tax Payment status</string>
    <string name="update">Update</string>
    <string name="select_a_File_to_Upload">Select a File to Upload</string>
    <string name="please_install_a_File_Manager">Please install a File Manager.</string>
    <string name="permission_granted">Permission granted!</string>
    <string name="permission_denied">Permission denied!</string>
    <string name="you_need_to_update_TP_TAX">You need to update Town Panchayat TAX</string>
    <string name="version_msg">This This version of Town Panchayat TAX is no longer supported. Please go to Official Site and install new version</string>
    <string name="assessment_Status">Assessment Status</string>
    <string name="tax_Type">Tax Type</string>
    <string name="select_tax_Type">Select tax type to scan QR Code !</string>
    <string name="assessment_Id">Assessment Id</string>
    <string name="submit">Submit</string>
    <string name="take_Photo">Take Photo</string>
    <string name="save_IMAGE">SAVE IMAGE</string>
    <string name="daily_Collection">Tax Collection</string>
    <string name="property">Property</string>
    <string name="year">Year</string>
    <string name="date">Date</string>
    <string name="dashboard">Dashboard</string>
    <string name="trade_Licence">Trade Licence</string>
    <string name="field_Visit">Field Visit</string>
    <string name="assessment">Assessment</string>
    <string name="sync_Data">Sync Data</string>
    <string name="existing_Trade_Licence">Existing Trade Licence</string>
    <string name="trade_Code">Trade Code</string>
    <string name="or">Or</string>
    <string name="mobile_No">Mobile No</string>
    <string name="ward_No">Ward No</string>
    <string name="street_Name">Street Name</string>
    <string name="clear">Clear</string>
    <string name="existing_Traders">Existing Traders</string>
    <string name="oK">OK</string>
    <string name="document">Document</string>
    <string name="existing_Trader_Details">Existing Trader Details</string>
    <string name="applicant_Name">Applicant Name</string>
    <string name="applicant_Name_In_Tamil">Applicant Name In Tamil</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="father_Husband_Name">Father/Husband Name</string>
    <string name="father_Husband_Name_In_Tamil">Father/Husband Name In Tamil</string>
    <string name="email_Id">Email Id</string>
    <string name="description_In_English">Description In English</string>
    <string name="description_In_Tamil">Description In Tamil</string>
    <string name="door_No">Door No</string>
    <string name="plot_area">Plot Area</string>
    <string name="buildage">Building Age</string>
    <string name="buildusage">Building Usage</string>
    <string name="buildstructure">Building Structure</string>
    <string name="location">Location</string>
    <string name="licence_Validity">Licence Validity</string>
    <string name="are_you_the_Owner">Are you the Owner</string>
    <string name="rental_Lease_agreement">Rental Lease Agreement</string>
    <string name="choose_File">Choose File</string>
    <string name="licence_Type">Licence Type</string>
    <string name="temporary">Temporary</string>
    <string name="trade_Description">Trade Description</string>
    <string name="establishment_Name">Establishment Name</string>
    <string name="motor_Available">Motor Available</string>
    <string name="motor_Range_in_Horse_Power">Motor Range(in Horse Power)</string>
    <string name="generator_Available">Generator Available</string>
 <string name="tax_type">	Tax Type	</string>
 <string name="service_list_field_type">	ServiceListField Type	</string>
 <string name="from">	From	</string>
 <string name="to">	To	</string>
 <string name="select_from_and_to_Date">Select from and to Date</string>
</resources>