<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.nic.VPTax.fragment.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home">

          </fragment>


    <fragment
        android:id="@+id/nav_photos"
        android:name="com.nic.VPTax.fragment.PhotosFragment"
        android:label="@string/nav_photos"
        tools:layout="@layout/fragment_photos" />

    <fragment
        android:id="@+id/nav_movies"
        android:name="com.nic.VPTax.fragment.MoviesFragment"
        android:label="@string/nav_movies"
        tools:layout="@layout/fragment_movies" />
</navigation>