<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:customfontdemo="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_margin="20dp"
    android:padding="10dp"
    android:layout_gravity="center"
    android:background="#00FF0000">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:background="@drawable/activity_bg_grey">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:padding="3dp"
            android:id="@+id/relative1"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="10dp"
                android:tint="@color/grey2"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:id="@+id/close"
                android:padding="3dp"
                app:srcCompat="@drawable/ic_close"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/grey2"
                android:gravity="center"
                android:id="@+id/header"
                android:padding="0dp"
                android:layout_gravity="center"
                android:layout_centerVertical="true"
                android:textSize="15sp"
                android:text="@string/field_Visit"
                android:fontFamily="sans-serif" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/content_layout"
            android:paddingTop="10dp"
            android:paddingBottom="20dp"
            android:background="@drawable/background_with_bottom_corners">
            <LinearLayout
                android:id="@+id/tax_type_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_left_20dp"
                    android:layout_marginTop="@dimen/padding"
                    android:layout_marginRight="@dimen/margin_left_20dp"
                    android:text="@string/tax_type"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_15sdp"
                    android:visibility="visible"
                    customfontdemo:fontName="@string/font_circular_medium" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/header"
                    android:layout_marginLeft="@dimen/margin_left_20dp"
                    android:layout_marginTop="@dimen/padding"
                    android:layout_marginRight="@dimen/margin_left_20dp"
                    android:background="@drawable/rectangle_box"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerInParent="true"


                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_15sdp"
                        android:visibility="visible"
                        customfontdemo:fontName="@string/font_circular_book" />
                    <Spinner
                        android:id="@+id/tax_type_history"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:gravity="center" />

                </RelativeLayout>


            </LinearLayout>
            <LinearLayout
                android:id="@+id/service_field_visit_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tax_type_layout"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_left_20dp"
                    android:layout_marginTop="@dimen/padding"
                    android:layout_marginRight="@dimen/margin_left_20dp"
                    android:text="@string/service_list_field_type"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_15sdp"
                    android:visibility="visible"
                    customfontdemo:fontName="@string/font_circular_medium" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/header"
                    android:layout_marginLeft="@dimen/margin_left_20dp"
                    android:layout_marginTop="@dimen/padding"
                    android:layout_marginRight="@dimen/margin_left_20dp"
                    android:background="@drawable/rectangle_box"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerInParent="true"


                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_15sdp"
                        android:visibility="visible"
                        customfontdemo:fontName="@string/font_circular_book" />
                    <Spinner
                        android:id="@+id/service_filed_type_history"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:gravity="center" />

                </RelativeLayout>


            </LinearLayout>
            <RelativeLayout
                android:id="@+id/date_layout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/header"
                android:layout_marginLeft="@dimen/margin_left_20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="@dimen/margin_left_20dp"
                android:background="@drawable/rectangle_box"
                android:layout_below="@+id/service_field_visit_layout"
                android:orientation="vertical"
                android:onClick="@{()-> activity.showDatePickerDialog()}"
                android:visibility="visible">


                <TextView
                    android:id="@+id/date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toLeftOf="@+id/calendar_icon"
                    android:ellipsize="marquee"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/select_from_and_to_Date"
                    android:textAlignment="viewStart"
                    android:textSize="@dimen/_13sdp"
                    customfontdemo:fontName="@string/font_circular_book" />

                <TextView
                    android:id="@+id/calendar_icon"

                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginRight="@dimen/_6sdp"
                    android:background="@drawable/datepicker_icon"
                    android:focusable="true"
                    android:focusableInTouchMode="true"

                    android:gravity="center" />


            </RelativeLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnBuy"
                android:layout_below="@+id/date_layout"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_background"
                android:visibility="visible"
                android:text="@string/submit"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:textAllCaps="true"
                android:textColor="@android:color/white" />

        </RelativeLayout>

    </LinearLayout>
</LinearLayout>
